--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,9 +18,16 @@ spring:
 
   servlet:
     multipart:
-      max-file-size: 50MB
-      max-request-size: 50MB
+      enabled: true
+      max-file-size: 100MB
+      max-request-size: 100MB
+  mvc:
+    async:
+      request-timeout: 10000
 
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
+
+
+
